==> Jordan-Szwejda/weact-eink-ch32-example/src/Epaper/epaper.cpp <==
#include "epaper.h"
#include "epdfont.h"
#include "debug.h"
#include <ch32v00x_gpio.h>
#include <gpio.h>
#define PIN_RESET PC0
#define PIN_BUSY PC1
#define PIN_DC PC2
#define PIN_CS PC3
#define PIN_SCK PC5
#define PIN_MOSI PC6

void epd_res_set()
{
  GPIO::digitalWrite(PIN_RESET, true);
  //GPIO_SetBits(GPIOA, GPIO_Pin_8);
}

void epd_res_reset()
{
  GPIO::digitalWrite(PIN_RESET, false);
  //GPIO_ResetBits(GPIOA, GPIO_Pin_8);
}

void epd_dc_set()
{
  GPIO::digitalWrite(PIN_DC, true);
  //GPIO_SetBits(GPIOB, GPIO_Pin_14);
}

void epd_dc_reset()
{
  GPIO::digitalWrite(PIN_DC, false);
  //GPIO_ResetBits(GPIOB, GPIO_Pin_14);
}

void epd_cs_set()
{
  GPIO::digitalWrite(PIN_CS, true);
  //GPIO_SetBits(GPIOB, GPIO_Pin_12);
}

void epd_cs_reset()
{
  GPIO::digitalWrite(PIN_CS, false);
  //GPIO_ResetBits(GPIOB, GPIO_Pin_12);
}

uint8_t epd_is_busy()
{
  return GPIO::digitalRead(PIN_BUSY);
  //return GPIO_ReadInputDataBit(GPIOA, GPIO_Pin_15) == Bit_RESET ? 0 : 1;
}

void epd_io_init(void)
{
  GPIO::pinMode(PIN_RESET, GPIO_Mode_Out_PP);
  GPIO::pinMode(PIN_DC, GPIO_Mode_Out_PP);
  GPIO::pinMode(PIN_CS, GPIO_Mode_Out_PP);
  GPIO::pinMode(PIN_BUSY, GPIO_Mode_IPU);


//  GPIO_InitTypeDef GPIO_InitStructure = {0};
  SPI_InitTypeDef spiConfig = {0};


  RCC_APB2PeriphClockCmd(GPIO::getGpioInfo(PIN_SCK).perpipherialClock | 
                        //GPIO::getGpioInfo(PIN_MISO).perpipherialClock | 
                        GPIO::getGpioInfo(PIN_MOSI).perpipherialClock | RCC_APB2Periph_SPI1,ENABLE);


initSpiPin(PIN_SCK, GPIO_Mode_AF_PP);
//initSpiPin(PIN_MISO, GPIO_Mode_IN_FLOATING);
initSpiPin(PIN_MOSI, GPIO_Mode_AF_PP);                        

  /* configure the epaper module res pin */
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(GPIOA, &GPIO_InitStructure);

  /* configure the epaper module busy pin */
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
//  GPIO_Init(GPIOA, &GPIO_InitStructure);

  /* configure the epaper module d/c pin */
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_14;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* configure the epaper module spi2 sck mosi pin */

/*  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure); */

  /* configure the epaper module cs pin */
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* configure spi2 */
//  RCC_APB1PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);

  spiConfig.SPI_Direction = SPI_Direction_1Line_Tx;
  spiConfig.SPI_Mode = SPI_Mode_Master;
  spiConfig.SPI_DataSize = SPI_DataSize_8b;
  spiConfig.SPI_CPOL = SPI_CPOL_High;
  spiConfig.SPI_CPHA = SPI_CPHA_2Edge;
  spiConfig.SPI_NSS = SPI_NSS_Soft;
  spiConfig.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16; //?
  spiConfig.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_Init(SPI1, &spiConfig);
  SPI_Cmd(SPI1, ENABLE);
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  SPI_I2S_SendData(SPI1, reg);
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  SPI_I2S_SendData(SPI1, data);
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{

  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET)
    ;
  SPI_I2S_SendData(SPI1, data);
}

void _epd_write_data_over()
{
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
