==> WeActStudio/WeActStudio.EpaperModule/Example/EpaperModuleTest_AT32F403A/Epaper/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "delay.h"

void epd_res_set()
{
  gpio_bits_set(GPIOA, GPIO_PINS_8);
}

void epd_res_reset()
{
  gpio_bits_reset(GPIOA, GPIO_PINS_8);
}

void epd_dc_set()
{
  gpio_bits_set(GPIOB, GPIO_PINS_14);
}

void epd_dc_reset()
{
  gpio_bits_reset(GPIOB, GPIO_PINS_14);
}

void epd_cs_set()
{
  gpio_bits_set(GPIOB, GPIO_PINS_12);
}

void epd_cs_reset()
{
  gpio_bits_reset(GPIOB, GPIO_PINS_12);
}

uint8_t epd_is_busy()
{
  return gpio_input_data_bit_read(GPIOA, GPIO_PINS_9) == RESET ? 0 : 1;
}

void epd_io_init(void)
{
  gpio_init_type gpio_init_struct;

  /* enable gpioa gpiob clock */
  crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
  crm_periph_clock_enable(CRM_GPIOB_PERIPH_CLOCK, TRUE);

  /* set default parameter */
  gpio_default_para_init(&gpio_init_struct);

  /* configure the epaper module res pin */
  gpio_bits_reset(GPIOA, GPIO_PINS_8);
  gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
  gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
  gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
  gpio_init_struct.gpio_pins = GPIO_PINS_8;
  gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
  gpio_init(GPIOA, &gpio_init_struct);

  /* configure the epaper module busy pin */
  gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
  gpio_init_struct.gpio_pull = GPIO_PULL_UP;
  gpio_init_struct.gpio_pins = GPIO_PINS_9;
  gpio_init(GPIOA, &gpio_init_struct);

  /* configure the epaper module d/c pin */
  gpio_bits_set(GPIOB, GPIO_PINS_14);
  gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
  gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
  gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
  gpio_init_struct.gpio_pins = GPIO_PINS_14;
  gpio_init(GPIOB, &gpio_init_struct);

  /* configure the epaper module spi2 sck pin */
  gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
  gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
  gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
  gpio_init_struct.gpio_pins = GPIO_PINS_13;
  gpio_init(GPIOB, &gpio_init_struct);

  /* configure the epaper module spi2 mosi pin */
  //  gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
  //  gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
  gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
  gpio_init_struct.gpio_pins = GPIO_PINS_15;
  gpio_init(GPIOB, &gpio_init_struct);

  /* configure the epaper module cs pin */
  gpio_bits_set(GPIOB, GPIO_PINS_12);
  gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
  gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
  gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
  gpio_init_struct.gpio_pins = GPIO_PINS_12;
  gpio_init(GPIOB, &gpio_init_struct);

  /* configure spi2 */
  spi_init_type spi_init_struct;
  crm_periph_clock_enable(CRM_SPI2_PERIPH_CLOCK, TRUE);
  spi_default_para_init(&spi_init_struct);
  spi_init_struct.transmission_mode = SPI_TRANSMIT_HALF_DUPLEX_TX;
  spi_init_struct.master_slave_mode = SPI_MODE_MASTER;
  spi_init_struct.mclk_freq_division = SPI_MCLK_DIV_64;
  spi_init_struct.first_bit_transmission = SPI_FIRST_BIT_MSB;
  spi_init_struct.frame_bit_num = SPI_FRAME_8BIT;
  spi_init_struct.clock_polarity = SPI_CLOCK_POLARITY_HIGH;
  spi_init_struct.clock_phase = SPI_CLOCK_PHASE_2EDGE;
  spi_init_struct.cs_mode_selection = SPI_CS_SOFTWARE_MODE;
  spi_init(SPI2, &spi_init_struct);
  spi_enable(SPI2, TRUE);
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  spi_i2s_data_transmit(SPI2, reg);
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  spi_i2s_data_transmit(SPI2, data);
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{
  while (spi_i2s_flag_get(SPI2, SPI_I2S_TDBE_FLAG) == RESET)
    ;
  spi_i2s_data_transmit(SPI2, data);
}

void _epd_write_data_over()
{
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
